--- a/_talks/2021-10-16-talk-2.md
+++ b/_talks/2021-10-16-talk-2.md
@@ -7,6 +7,10 @@ venue: "IISER Mohali"
 date: 2021-10-16
 location: "Online Presentation"
 ---
-https://youtu.be/rc1L1j6HBGc
 
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+This talk was presented as a part of the IDC451 Seminar Delivery course at IISER Mohali. 
+
+The talk goes over the basic ideas of the Genetic Algorithm for problems of optimization. More specifically, we go through an implementation to find the ground state stationary solution of a 1-dimensional quantum system. [\[Video\]](https://youtu.be/rc1L1j6HBGc
+) [\[Slides\]](http://20akshay00.github.io/files/IDC451.pdf)
+
+**Note:** The pacing of the talk is really off, as there was a strict time limit and I have quite a hard time sticking to them..
