--- a/_talks/2021-03-19-talk-1.md
+++ b/_talks/2021-03-19-talk-1.md
@@ -8,9 +8,9 @@ date: 2021-03-19
 location: "Online Presentation"
 ---
 
-This talk was presented as a part of the [Egg-paratha](https://iiserm.github.io/egg-paratha/old/) series (2021) for weekly discussions on computational physics. 
+This talk was presented as a part of the [egg-paratha](https://iiserm.github.io/egg-paratha/old/) series (2021) for weekly discussions on computational physics. 
 
-The talk covers basic ideas of finite difference methods to represent and work with derivatives numerically in a computer simulation. It was meant to serve as a primer to attempt simulating the wave equation. [\[Video\]](https://www.youtube.com/watch?v=vCZsTcLbZ3M&t=1873s) [[\Slides\]](https://iiserm.github.io/egg-paratha/old/week1/week1_slides)
+The talk covers basic ideas of finite difference methods to represent and work with derivatives numerically in a computer simulation. It was meant to serve as a primer to attempt simulating the wave equation. [\[Video\]](https://www.youtube.com/watch?v=vCZsTcLbZ3M&t=1873s) [\[Slides\]](https://iiserm.github.io/egg-paratha/old/week1/week1_slides)
 
 
 **Note:** This was my first talk ever after getting into my undergraduate program, and it is *riddled* with errors all the way from incorrect orders of derivative errors upto missing 'dx' terms in places. However, I think the main ideas of the talk are still conveyed, so I have left the video up. But if you are watching it, do proceed with some healthy skepticism (as one always should!).
