--- a/_talks/2022-03-26-talk-4.md
+++ b/_talks/2022-03-26-talk-4.md
@@ -1,11 +1,13 @@
 ---
-title: "Conference Proceeding talk 3 on Relevant Topic in Your Field"
+title: "Simulating Plasma Physics"
 collection: talks
-type: "Conference proceedings talk"
-permalink: /talks/2022-03-26-talk-3
-venue: "Testing Institute of America 2014 Annual Conference"
+type: "IDC452 Seminar Delivery"
+permalink: /talks/2021-10-16-talk-2
+venue: "IISER Mohali"
 date: 2022-03-26
-location: "Los Angeles, CA"
+location: "Online Presentation"
 ---
 
-This is a description of your conference proceedings talk, note the different field in type. You can put anything in this field.
+This talk was presented as a part of the IDC452 Seminar Delivery course at IISER Mohali. 
+
+The talk goes over a Particle-in-a-cell implementation to simulate basic plasma physics. The results are validated by recreating a two-stream instability simulation. This talk was not recorded. [\[Slides\]](http://20akshay00.github.io/files/IDC452.pdf)
