--- a/_posts/2024-03-11-blog-post-1.md
+++ b/_posts/2024-03-11-blog-post-1.md
@@ -6,6 +6,6 @@ tags:
   - first
 ---
 
-*"This marks the first post of my website!"*, is what I had written on the actual first post made here, back in March 2022. However, there was never a second post, as I seem to have been swept up by my Master's thesis and other commitments soon after. Times are different now though! I started my Doctoral degree a couple months ago and have a healthy work-life balance. Every day I encounter problems in my research and learn a lot of small things; new ideas, clever tricks, interesting tools, improved workflows, and so on. In an attempt to disseminate such insights, I plan to set aside some time to regularly document them for the wider audience, in the coming months. 
+*"This marks the first post of my website!"*, is what I had written on the actual first post made here, back in March 2022. However, there was never a second post, as I seem to have been swept up by my Master's thesis and other commitments soon after. Times are different now though! I started my Doctoral degree a couple months ago and have a healthy work-life balance. Every day, I encounter problems in my research and learn a lot of small things; new ideas, clever tricks, interesting tools and improved workflows. In an attempt to disseminate such insights, I plan to set aside some time to regularly document them for the wider audience, in the coming months. 
 
-As I seem to have written two years ago as well, here's to new beginnings!
+So... as I seem to have written two years ago as well, here's to new beginnings!
