--- a/_posts/2024-04-20-blog-post-2.md
+++ b/_posts/2024-04-20-blog-post-2.md
@@ -43,7 +43,7 @@ Instead, I ended up learning about a [common design pattern](https://gameprogram
 
 The above image shows the diagram for the state machine I used; the circles are states and the arrows represent the input needed to trigger a transition. I thought it was really neat that this rather abstract concept that I learnt years ago, popped up here and made things very pleasant to implement (it also pops up in another unexpected place, namely, in the construction [Matrix Product Operators](https://tensornetwork.org/mpo/) when dealing with Tensor Network methods to study Quantum systems, but thats for another post). Anyways, followed by a quick dive into using TileMaps in Godot, I ended up with this after a couple of hours.
 
- <video style="display: block;margin: 0 auto;" width="640" controls autoplay>
+ <video style="display: block;margin: 0 auto;" width="640" controls>
   <source src="/images/blog/post2/CardStateMachineDemo.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video> 
@@ -72,7 +72,7 @@ On initialization of the level, this data is parsed into a 2D array which is the
 
 By the time I had the UI system ready, Jaylus had also made a bunch of the art, and at the end of day one we had a technically playable game where the player could place tokens for no purpose, because there was absolutely nothing to do yet. Further, the concepts we had were untested and we had no way of knowing if it would actually be engaging. 
 
- <video style="display: block;margin: 0 auto;" width="640" controls autoplay>
+ <video style="display: block;margin: 0 auto;" width="640" controls>
   <source src="/images/blog/post2/UIDemo.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video> 
@@ -87,7 +87,7 @@ However, the design choices I made on a whim at this point did result in several
 ### Creating synergy
 I started off with the dragon and its fireball which were quite simple to implement, its simply a projectile that behaves differently based on the target it hits. For example, it is destroyed when hitting an axe or a wall, but it kills any summon, player or breakable wall standing in its way. Interaction with the skeleton is different however; it gets destroyed if hitting head on, deflect if hitting sideways and kills the skeleton if its facing the wrong way.
 
- <video style="display: block;margin: 0 auto;" width="640" controls autoplay>
+ <video style="display: block;margin: 0 auto;" width="640" controls>
   <source src="/images/blog/post2/FireBall.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video> 
@@ -96,21 +96,25 @@ I started off with the dragon and its fireball which were quite simple to implem
 
 See what I'm getting at here? Adding a single element to the game now introduces a whole new host of interactions with every other existing element. Thats the synergy I wanted to implement although it didn't happen to the extent I had hoped. By adding rich interactions between summons, we get closer and closer to a truly wonderful concept of **emergent gameplay**. That is, behavior that we hadn't explicitly planned out starts arising out of a few basic rules. It simply happens because it can. Quite reminiscent of emergent phenomena in nature, which is equally mystifying. Another example of varied interactions involves how the  skeleton interacts with an axe based on its direction.
 
- <video style="display: block;margin: 0 auto;" width="640" controls autoplay>
+ <video style="display: block;margin: 0 auto;" width="640" controls>
   <source src="/images/blog/post2/SkeletonAxed.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video> 
 
 ---
 
-Perhaps these can then be chained in some manner to create a cascading effect. Unfortunately we ran out of time to experiment with something like this during the jam. It still stands that the game shows potential with the addition of more summonable creatures and interactions (such as webs burning upon touching a fireball).
+Perhaps these can then be chained in some manner to create a cascading effect. Unfortunately we ran out of time to experiment with something like this during the jam. It still stands that the game shows potential with the addition of more summonable creatures and interactions (such as webs burning upon touching a fireball or getting cut when sliced by an axe).
 
- <video style="display: block;margin: 0 auto;" width="640" controls autoplay>
+ <video style="display: block;margin: 0 auto;" width="640" controls>
   <source src="/images/blog/post2/Chaining.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video> 
-
 ---
+
+Emergent gameplay in a puzzle game is a bit hard to get a handle on though since you need to anticipate player solutions in order to avoid cheesing a level with the same trick over and over. In other cases, like the one shown below, the flexibility of interactions simply gives rise to more innovative solutions which is a desirable effect. When a game provides the player with a set of tools and there are intuitive ways that the player wishes to use those tools, it stands to reason that the experience will be enhanced if the game is flexible enough to accomodate such behavior. There does seem to be a balance that must be struck here to make it work in a puzzle game.
+
+![Alternative](/images/blog/post2/Alternative.png){:width="640" style="display:block;margin: 0 auto;"}
+
 
 ## Designing levels
 While I was implementing the mechanics, we were running out of time and Eranan came in clutch! He had a bunch of level ideas just based off the bits and pieces of demo videos I sent over the day and whipped up a couple of mock levels. This was done in the most anti-programmer way ever.. using google spreadsheets. And it worked like a charm :)
@@ -209,7 +213,7 @@ This makes it sound like we anticipated every move though. That was certainly no
 
 - An unfortunate bug. If the skeleton is placed <2 blocks away from a dragon, the fireball is deflecting but also kills the skeleton. This was not intended behaviour, but some players just tried this and got the wrong idea about the mechanic, thus hindering the solution for the puzzle.
 
- <video style="display: block;margin: 0 auto;" width="640" controls autoplay>
+ <video style="display: block;margin: 0 auto;" width="640" controls>
   <source src="/images/blog/post2/SkeletonByeBye.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video> 
