--- a/_posts/2024-04-20-blog-post-2.md
+++ b/_posts/2024-04-20-blog-post-2.md
@@ -209,9 +209,9 @@ The thing is, I did not design these levels, I merely implemented what Eranan ha
 
 Another thing I noticed was that many players were able to solve certain levels with fewer cards than what was provided. I initially thought these were simply overlooked when Eranan designed the puzzles, but I was surprised to find out it was not. In fact, it was a very deliberate move that worked exactly as he intended. These excess cards were provided in the last two levels which were more intricately designed. The extra cards played two roles; (1) they acted as red herrings, leading the player to think that the solution was more complicated than what they expected and (2) when they ended up solving it with fewer cards, they felt _smart_ (and they are!) because they found a more optimal route than what we supposedly planned. And this is brilliant because it ends the game at a high note, with the player feeling good about themselves. If you think about it, isn't that what puzzle games are all about :) that _AHA!_ moment.
 
-This makes it sound like we anticipated every move though. That was certainly not the case either! There were a couple of instances where players did indeed outsmart us, particularly in a manner that hurt the game. In level 4, the player must used a skeleton to deflect the axe so as to clear a path for the player to walk across the chasm. In level 6, we leave the player stranded in a very constricted area with a set of cards that don't quite make sense (a dragon, a skeleton and a couple of spiders). The intent was that the player connects the dots that if the skeleton can deflect an axe, maybe it can deflect a fireball too. However, there is also an element of experimentation in that they must change the direction of the skeleton to realize that fireballs can be redirected too. This was hampered due to two reasons:
+This makes it sound like we anticipated every move though. That was certainly not the case either! There were a couple of instances where players did indeed outsmart us, particularly in a manner that hurt the game. In level 4, the player must used a skeleton to deflect the axe so as to clear a path to walk across the chasm. In level 6, we leave the player stranded in a very constricted area with a set of cards that don't quite make sense (a dragon, a skeleton and a couple of spiders). The intent was that the player connects the dots that if the skeleton can deflect an axe, maybe it can deflect a fireball too. However, there is also an element of experimentation in that they must change the direction of the skeleton to realize that fireballs can be redirected as well. This was hampered due to two reasons:
 
-- An unfortunate bug. If the skeleton is placed <2 blocks away from a dragon, the fireball is deflecting but also kills the skeleton. This was not intended behaviour, but some players just tried this and got the wrong idea about the mechanic, thus hindering the solution for the puzzle.
+- An unfortunate bug. If the skeleton is placed <2 blocks away from a dragon, the fireball is deflected but also kills the skeleton. This was not intended behaviour, but some players just tried this and got the wrong idea about the mechanic, thus hindering the solution for the puzzle.
 
  <video style="display: block;margin: 0 auto;" width="640" controls>
   <source src="/images/blog/post2/SkeletonByeBye.mp4" type="video/mp4">
