--- a/_posts/2024-04-20-blog-post-2.md
+++ b/_posts/2024-04-20-blog-post-2.md
@@ -117,7 +117,7 @@ Emergent gameplay in a puzzle game is a bit hard to get a handle on though since
 
 
 ## Designing levels
-While I was implementing the mechanics, we were running out of time and Eranan came in clutch! He had a bunch of level ideas just based off the bits and pieces of demo videos I sent over the day and whipped up a couple of mock levels. This was done in the most anti-programmer way ever.. using google spreadsheets. And it worked like a charm :)
+While I was implementing the mechanics, we were running out of time and Eranan came in clutch! He had a bunch of level ideas just based off the bits and pieces of demo videos I sent over the day and whipped up a couple of mock levels. This was done in a rather simple manner... using google spreadsheets. And it worked like a charm :)
 
 ![Level Design](/images/blog/post2/LevelDesign.png){:width="640" style="display:block;margin: 0 auto;"}
 
@@ -197,13 +197,13 @@ Once this was done, it was finally time to just sit back and see how players res
 
 > **An interesting puzzle with cool summoning mechanics.** The graphics are a little off, and in some places it seems raw. Just like the mechanics, who don’t always work as we would like. **However, still a good game for jam!**
 
-Notice the sandwich? Some of these are well meaning and provide genuine constructive criticism, but beyond a point it shows as insincere flattery just to get their karma up. There is a solution though. In popular jams like the Ludum Dare, some participants also livestream their gameplay while providing feedback on other entries. I had submitted our game to a few such streams and it turned out to be far more valuable in terms of gauging player experience. This is what I learnt.
+Notice the sandwich? There's nothing inherently wrong with this. I find myself doing the same while reviewing other games too. While many of these comments are well meaning and provide genuine constructive criticism, beyond a point, they parrot the same flaws mashed between insincere flattery, making it hard to derive genuinely useful feedback. There is a solution though. In popular jams like the Ludum Dare, some participants also livestream their gameplay while providing feedback on entries. I had submitted our game to a few such streams and this turned out to be far more valuable in terms of gauging player experience. This is what I learnt.
 
 ## Game design
 
 I noticed that players initially took a while to get the hang of the mechanics in the first level (the fact that summons are placed, rotated and cannot be picked back up) but after that it was smooth sailing past the four tutorial levels, until they hit the final two levels that require a little thinking. The difficulty ramp emerged perfectly, keeping the player engaged and ended on a high. 
 
-The thing is, I did not design these levels, I merely implemented what Eranan had designed. Although it seems obvious in hindsight, it was only now apparent to me that game design is a completely separate thing from programming, although they are intricately tied together. Game design tackles what is _fun_ to play, and how best to communicate necessary rules to the player to facilitate them to have fun without being too hand-holdy or controlling. This is something we suffered from because each of us in the team were focused on our own tasks that we forgot to _design_ the game! It still managed to work out just fine (perhaps because the idea happened to be fun at its core), but it is certainly a lesson for next time to plan accordingly.
+The thing is, I did not design these levels, I merely implemented what Eranan had designed. Although it seems obvious in hindsight, it was only now apparent to me that game design is a completely separate thing from programming, although they are intricately tied together. Game design deals with elements that are _fun_ to play, and how best to communicate necessary rules to the player to facilitate them to have fun without being too controlling or entirely care-free. This is something that I did not pay much attention to, instead focusing on how to _implement_ aspects of the game. It still managed to work out just fine (perhaps because the idea happened to be fun at its core and my team-mates pulled us through), but it is certainly a lesson for next time to plan accordingly.
  
 ## Player psychology
 
@@ -211,7 +211,7 @@ Another thing I noticed was that many players were able to solve certain levels 
 
 This makes it sound like we anticipated every move though. That was certainly not the case either! There were a couple of instances where players did indeed outsmart us, particularly in a manner that hurt the game. In level 4, the player must used a skeleton to deflect the axe so as to clear a path to walk across the chasm. In level 6, we leave the player stranded in a very constricted area with a set of cards that don't quite make sense (a dragon, a skeleton and a couple of spiders). The intent was that the player connects the dots that if the skeleton can deflect an axe, maybe it can deflect a fireball too. However, there is also an element of experimentation in that they must change the direction of the skeleton to realize that fireballs can be redirected as well. This was hampered due to two reasons:
 
-- An unfortunate bug. If the skeleton is placed <2 blocks away from a dragon, the fireball is deflected but also kills the skeleton. This was not intended behaviour, but some players just tried this and got the wrong idea about the mechanic, thus hindering the solution for the puzzle.
+- An unfortunate bug. If the skeleton is placed <2 blocks away from a dragon, the fireball is deflected but also kills the skeleton. This was not intended behaviour, but the players who were unfortunate enough to encounter this situation got the wrong idea about the mechanic, thus hindering their ideas for solving the puzzle.
 
  <video style="display: block;margin: 0 auto;" width="640" controls>
   <source src="/images/blog/post2/SkeletonByeBye.mp4" type="video/mp4">
@@ -226,7 +226,13 @@ Those who were able to reach the intended solution without the bugs praised the 
 
 ## Presentation
 
-While the game was overall fairly polished, it was clearly not without its bugs and quirks. Given that it is a jam game though, players are more likely to be more forgiving towards these things  by virtue of the fact that they are also game developers. Even so, the fact that the game looks, sounds and feels good to play did tend to make people look past such issues as well. After all, the end goal is to have fun playing, and if that comes from leaning a bit towards the _aesthetics_ over mechanics, there is nothing necessarily wrong with that (for e.g. I felt [this](https://saveslothstudios.itch.io/the-royal-writ) game is a perfect example here).
+While the game was overall completed and playable, it was clearly not without its bugs and quirks. Following are two of the most prominent nitpicks, both of which we wholeheartedly agree with.
+
+- The player movement should be simplified. Either by means of holding down a button for continuous movement, or by dragging a path with the mouse. As it stands, the user must tap the arrow keys and wait for the painfully slow character to move across the board.
+- The card dropping UI needs polish. Since the cards were rather large relative to the board, people often placed them on the wrong tile by mistake and were forced to restart the level. The simplest fix is to simply highlight the tile over which the mouse is currently at, or replace the translucent card with a translucent summon token on the board to indicate where the placement will be. 
+  - Another possible (and programmatically more interesting) fix could be to allow picking the summons back up. However, given the real time nature of the game with moving projectiles and whatnot, this would invariably break the puzzle design. The true solution would have involved the addition of an "undo" button instead, which literally reverses game state. This is a rather cumbersome task though, unless the code has been architectured in an appropriate manner from the beginning.  
+
+Given that it is a jam game though, players are quite likely to be forgiving towards such things by virtue of the fact that they are also game developers with equally janky entries. Even so, the fact that the game looks, sounds and feels good to play did tend to make players look past such issues as well. After all, the end goal is to have fun playing and if that comes from leaning a bit towards the _aesthetics_ over _mechanics_, there is nothing necessarily wrong with that (for example, I felt that [this](https://saveslothstudios.itch.io/the-royal-writ) game is a perfect example here).
 
 
 # Final thoughts
