--- a/_posts/2024-04-20-blog-post-2.md
+++ b/_posts/2024-04-20-blog-post-2.md
@@ -19,7 +19,7 @@ When I went into this jam, I had a rather narrow vision of what developing games
 
 # The Idea
 
-At 3AM EST, the theme was announced... **Summoning**. Not bad! I was quite excited since I have a great deal of fun with magic and wizards and all that. The first thought is never the best though, and wizardry was far too obvious an interpretation of the theme (people came up with some excellent unconventional ideas; I found [this](https://ldjam.com/events/ludum-dare/55/some-munnings) one particularly hilarious.). Jaylus made it clear at the start that she did not want to make a typical platformer style game, much to my dismay as this is what I had experience with, but in hindsight, this was a great decision. We started throwing around ideas, and this was one that stood out:
+At 3AM EST, the theme was announced... **Summoning**. Not bad! I was quite excited since I have a great deal of fun with magic and wizards and all that. The first thought is never the best though, and wizardry was far too obvious an interpretation of the theme (people came up with some excellent unconventional ideas; I found [this](https://ldjam.com/events/ludum-dare/55/some-munnings) one particularly hilarious.). Jaylus made it clear at the start that she did not want to make a typical platformer style game, much to my dismay as this is what I had experience with. In hindsight, this was a great decision as it allowed me to learn new things. We then started throwing around ideas, and this was one that stood out:
 
 > Idea 2 : You're exploring an old haunted house because you heard of hidden treasure & have to fight through spirits/creatures summoned by occult explorers to reach the treasure. 
 
@@ -41,7 +41,7 @@ Instead, I ended up learning about a [common design pattern](https://gameprogram
 
 ![StateMachine](/images/blog/post2/CardStateMachine.png){:width="640" style="display:block;margin: 0 auto;"}
 
-The above image shows the diagram for the state machine I used; the circles are states and the arrows represent the input needed to trigger a transition. I thought it was really neat that this rather abstract concept that I learnt years ago, popped up here and made things very pleasant to implement (it also pops up in another unexpected place, namely, in the construction [Matrix Product Operators](https://tensornetwork.org/mpo/) when dealing with Tensor Network methods to study Quantum systems, but thats for another post). Anyways, followed by a quick dive into using TileMaps in Godot, I ended up with this after a couple of hours.
+The above image shows the diagram for the state machine I used; the circles are states and the arrows represent the input needed to trigger a transition. I thought it was really neat that this rather abstract concept that I learnt years ago, popped up here and made things very pleasant to implement (it also pops up in another unexpected place, namely, in the construction [Matrix Product Operators](https://tensornetwork.org/mpo/) when dealing with Tensor Network methods to study Quantum systems, but thats for another post). Anyways, followed by a quick dive into using tile maps in Godot, I ended up with this after a couple of hours.
 
  <video style="display: block;margin: 0 auto;" width="640" controls>
   <source src="/images/blog/post2/CardStateMachineDemo.mp4" type="video/mp4">
@@ -53,7 +53,7 @@ The above image shows the diagram for the state machine I used; the circles are 
 
 ---
 
-Now that we can pick up cards; what about dropping them on the grid? Each level inherently has three characteristic tiles; <span style="color:#000000">**Wall**</span> (cannot walk through them or place summons), <span style="color:#696a6a">**Chasm**</span> (can walk and fall to your death, only certain summons can be placed), and <span style="color:#ffffff;background-color:#b4b6b6">**Ground**</span> (walkable and can place all summons). This information is encoded in each level by manually painting the TileMap with three corresponding tiles like so. 
+Now that we can pick up cards; what about dropping them on the grid? Each level inherently has three characteristic tiles; <span style="color:#000000">**Wall**</span> (cannot walk through them or place summons), <span style="color:#696a6a">**Chasm**</span> (can walk and fall to your death, only certain summons can be placed), and <span style="color:#ffffff;background-color:#b4b6b6">**Ground**</span> (walkable and can place all summons). This information is encoded in each level by manually painting the tile map with three corresponding tiles like so. 
 
 ![GridData](/images/blog/post2/GridData.png){:width="640" style="display:block;margin: 0 auto;"}
 
@@ -70,7 +70,7 @@ On initialization of the level, this data is parsed into a 2D array which is the
 > 
 >    Frost elemental: Can temporarily freeze moving obstacles (e.g., a swinging axe hung from the ceiling)
 
-By the time I had the UI system ready, Jaylus had also made a bunch of the art, and at the end of day one we had a technically playable game where the player could place tokens for no purpose, because there was absolutely nothing to do yet. Further, the concepts we had were untested and we had no way of knowing if it would actually be engaging. 
+By the time I had the UI system ready, Jaylus had also made a bunch of the art, and at the end of day one we technically had a playable game where the user could summon creatures for no purpose, because there was absolutely nothing to do yet. Further, the concepts we had were untested and we had no way of knowing if it would actually be engaging. 
 
  <video style="display: block;margin: 0 auto;" width="640" controls>
   <source src="/images/blog/post2/UIDemo.mp4" type="video/mp4">
@@ -94,7 +94,7 @@ I started off with the dragon and its fireball which were quite simple to implem
 
 ---
 
-See what I'm getting at here? Adding a single element to the game now introduces a whole new host of interactions with every other existing element. Thats the synergy I wanted to implement although it didn't happen to the extent I had hoped. By adding rich interactions between summons, we get closer and closer to a truly wonderful concept of **emergent gameplay**. That is, behavior that we hadn't explicitly planned out starts arising out of a few basic rules. It simply happens because it can. Quite reminiscent of emergent phenomena in nature, which is equally mystifying. Another example of varied interactions involves how the  skeleton interacts with an axe based on its direction.
+See what I'm getting at here? Adding a single element to the game now introduces a whole new host of interactions with every other existing element. That is the synergy that I hoped to implement, although I was not able to get far in accomplishing this. By adding rich interactions between summons, we get closer and closer to a truly wonderful concept of **emergent gameplay** (something that [Rainworld](https://rainworldgame.com/) and [Noita](https://noitagame.com/) achieved exceptionally). That is, behavior that we hadn't explicitly planned out starts arising out of a few basic rules. It simply happens because it can. It is actually quite reminiscent of [emergent phenomena in nature](https://cse-robotics.engr.tamu.edu/dshell/cs689/papers/anderson72more_is_different.pdf), which is equally mystifying. Another example of varied interactions that seed such gameplay involves how the skeleton interacts with an axe based on its direction.
 
  <video style="display: block;margin: 0 auto;" width="640" controls>
   <source src="/images/blog/post2/SkeletonAxed.mp4" type="video/mp4">
@@ -103,7 +103,7 @@ See what I'm getting at here? Adding a single element to the game now introduces
 
 ---
 
-Perhaps these can then be chained in some manner to create a cascading effect. Unfortunately we ran out of time to experiment with something like this during the jam. It still stands that the game shows potential with the addition of more summonable creatures and interactions (such as webs burning upon touching a fireball or getting cut when sliced by an axe).
+Perhaps these can then be chained in some manner to create a cascading effect. Unfortunately we ran out of time to experiment with something like this during the jam. Regardless, the feedback recieved from players did establish the fact that the game shows much potential with the addition of more summonable creatures and interactions (such as webs burning upon touching a fireball or getting cut when sliced by an axe).
 
  <video style="display: block;margin: 0 auto;" width="640" controls>
   <source src="/images/blog/post2/Chaining.mp4" type="video/mp4">
