--- a/_posts/2024-04-20-blog-post-2.md
+++ b/_posts/2024-04-20-blog-post-2.md
@@ -171,7 +171,7 @@ The nightmares with exporting didn't end there though. In game jams, exporting a
 
 ![Works on my machine though](/images/blog/post2/WorksOnMyMachine.jpg){:width="500" style="display:block;margin: 0 auto;"}
 
-I suppose I jinxed it with this kind of thinking, because the web export was plagued with all kinds of inconsistencies with the debug version. The mouse cursor was gigantic, the graphics were slightly misaligned and most importantly the performance randomly tanked. This resulted in input lag for the player, and worse, the stutters ended up screwing with the physics and let the axes get stuck in a position, breaking entire levels. In extreme cases, the browser started using excessive memory and even ran out of it, resulting in crashes. These issues were wide and varied across different devices and browsers and I had no hope to fix them. In the end it turned out fine as it didn't seem too prevalent, but upon digging into this further I realized that, at least in part, such behavior was actually expected and well known.
+I suppose I jinxed it with this kind of thinking, because the web export was plagued with all kinds of inconsistencies with the debug version. The mouse cursor was gigantic, the graphics were slightly misaligned and most importantly the performance randomly tanked. This resulted in input lag for the player, and worse, the stutters ended up screwing with the physics, breaking entire levels. In extreme cases, the browser started using excessive memory and even ran out of it, resulting in crashes. These issues were wide and varied across different devices and browsers and I had no hope of fixing them. In the end, it turned out fine as it didn't seem too prevalent. However, upon digging into this further, I realized that, at least in part, such behavior was actually expected and well known.
 
 Huh? Well, I used Godot 4.2 for this project, and its relatively new. The thing is, Godot 3.5 had been the gold standard for a _really_ long time, and 4.0 came out last year with a bunch of new features and a sizeable rewrite of the engine internals. This resulted in a buggier albeit feature-rich engine, which is still not recommended for production usage. Specifically in the context of web exports, the Godot developers decided that they wanted to go forward with future-proof web technology for their exports such as [SharedArrayBuffers](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/SharedArrayBuffer) and other things I do not understand. However, not all browsers have caught up in supporting these features and thus we are stuck in an odd position where Godot games suffer not because of the engine's limitations but because everyone else haven't caught up yet. Can we really blame Godot here? One could argue that the only way to hasten the process of adopting new technology is by setting an example to begin with.
 
@@ -191,13 +191,13 @@ With the game built and ready to be shipped, I spent the last day just fixing so
 > "Threads spun, dragons breathe, one last reveal, in shadows seethe: skeletons stand, flames they fend, navigate their guard, towards the end."
 
 
-Once this was done, it was finally time to just sit back and see how players responded to the game. Usually in such game jams, the voting on games is not done by a singular judge but rather by other participants. Ludum Dare has a neat karma system in place such that the more you vote and comment on other games, the more visible your own game is to newer audiences (and this is very important since there are hundreds of games). This system is not without flaw, and a major one is that generally people tend to leave unusually encouraging and kind comments (where their name is displayed) while leaving poorer ratings (which are anonymous) which is more reflective of their actual opinions. Rather hilariously, this ends up manifesting in a very cookie-cutter format for most comments, something widely known as a *compliment sandwich*. Here's some examples from our comment section;
+Once this was done, it was finally time to just sit back and see how players responded to the game. Usually in such game jams, the voting on games is not done by a singular judge but rather by other participants. Ludum Dare has a neat karma system in place such that the more you vote and comment on other games, the more visible your own game is to newer audiences (and this is very important since there are hundreds of games). This system is not without its flaws, and a major one is that generally people tend to leave unusually encouraging and kind comments (where their name is displayed) while leaving poorer ratings (which are anonymous) which is more reflective of their actual opinions. Rather hilariously, this ends up manifesting in a very cookie-cutter format for most comments, something widely known as a *compliment sandwich*. Here's some examples from our comment section;
 
 > **Great interface! I was able to rock with a touchscreen and a keyboard no problem. Art was very nice! loved the style** - though for level design it was sometimes tough to figure out where the pits were. The timing and movement aspects felt like a side-show to the puzzle of figuring out how to solve the room, I almost wished for my guy to just auto-navigate instead of having to press the direction every square and watch him slowely slide around. **Though definitely still a great submission! :)**
 
 > **An interesting puzzle with cool summoning mechanics.** The graphics are a little off, and in some places it seems raw. Just like the mechanics, who don’t always work as we would like. **However, still a good game for jam!**
 
-Notice the sandwich? There's nothing inherently wrong with this. I find myself doing the same while reviewing other games too. While many of these comments are well meaning and provide genuine constructive criticism, beyond a point, they parrot the same flaws mashed between insincere flattery, making it hard to derive genuinely useful feedback. There is a solution though. In popular jams like the Ludum Dare, some participants also livestream their gameplay while providing feedback on entries. I had submitted our game to a few such streams and this turned out to be far more valuable in terms of gauging player experience. This is what I learnt.
+Notice the sandwich? There's nothing inherently wrong with this. I find myself doing the same while reviewing other games too. However, while many of these comments are well meaning and provide genuine constructive criticism, beyond a point, they parrot the same flaws mashed between insincere flattery, making it hard to derive genuinely useful feedback. There is a solution though. In popular jams like the Ludum Dare, some participants also livestream their gameplay while providing feedback on entries. I had submitted our game to a few such streams and this turned out to be far more valuable in terms of gauging player experience. This is what I learnt.
 
 ## Game design
 
